# rust-cli

./: .pre-commit-config.yaml  Cargo.toml  README.md  cli.d2  justfile
.github/workflows/: main.yml
src/: first_level.rs  lib.rs  main.rs  second_level.rs
tests/: integration_test.rs
