[package]
name = "rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
mockall = "0.12.1"
serial_test = "3.0.0"
stdio-override = "0.1.3"
test-env-helpers = "0.2.2"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "2.0"
